@@ -2,7 +2,8 @@
 
 	* include/kernaux/macro.h: Rename macro "KERNAUX_PACKING_ATTR" to
 	"KERNAUX_PACKED"
-	* include/kernaux/macro.h: Add macros "KERNAUX_UNUSED", "KERNAUX_NORETURN"
+	* include/kernaux/macro.h: Add macros "KERNAUX_UNUSED", "KERNAUX_NORETURN",
+	"KERNAUX_RETURNS_TWICE"
 
 2022-11-26  Alex Kotov  <kotovalexarian@gmail.com>
 
